--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
         android:theme="@style/Theme.AppGoods"
         tools:targetApi="31">
         <activity
+            android:name=".ItemActivity"
+            android:exported="false" />
+        <activity
             android:name=".ItemsActivity"
             android:exported="false" />
         <activity
-            android:name=".AuthActiv"
+            android:name=".AuthActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
